# My-Financial-AI-App

./: .env.example  .gitignore  CLAUDE.md  FEATURES.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bbdda67c4d93_initial_schema.py  e990ab4c2853_initial_schema.py
backend/app/: database.py  logger.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  holdings.py  sell_transactions.py  stocks.py  users.py  watchlists.py
backend/app/services/: ai_service.py  alpha_vantage.py
backend/tests/: conftest.py  test_ai.py  test_alpha_vantage_demo.py  test_auth.py  test_holdings.py  test_holdings_performance.py  test_logging.py  test_main.py  test_migrations.py  test_stocks.py  test_users.py  test_watchlists.py
e2e/: add-stock.spec.js  helpers.js  holdings-accounts.spec.js  users.spec.js  watchlists.spec.js
scripts/: take-screenshots.js
src/: App.vue  main.js
src/components/: AddStockModal.vue  ConfirmModal.vue  GlobalErrorToast.vue  ThesisAnalysisModal.vue  UserSwitcherModal.vue
src/composables/: useAIThesis.js  useDebounce.js  useFocusTrap.js
src/router/: index.js
src/services/: api.js
src/stores/: error.js  holdings.js  user.js  watchlists.js
src/styles/: buttons.css
src/tests/: App.spec.js
src/views/: AccountsView.vue  DashboardView.vue  (+4 more)
(+14 files in other folders)
